fixed spacing
fixed mobile spacing for header button

--- a/index.css
+++ b/index.css
@@ -54,6 +54,7 @@ table {
     max-width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 2rem;
 }
 
